/*
 * benchmark_records_1.proto
 *
 * This source file is part of the FoundationDB open source project
 *
 * Copyright 2021 Apple Inc. and the FoundationDB project authors
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
syntax = "proto2";

package com.apple.foundationdb.record.bench1;

option java_package = "com.apple.foundationdb.record";
option java_outer_classname = "BenchmarkRecords1Proto";

import "record_metadata_options.proto";

option (schema).store_record_versions = true;

message MySimpleRecord {
  optional int64 rec_no = 1 [(field).primary_key = true];
  optional string str_value_indexed = 2 [(field).index = {}];
  optional int32 num_value_unique = 3 [(field).index = { unique: true }];
  optional int32 num_value_2 = 4;
  optional int32 num_value_3_indexed = 5 [(field).index = {}];
}

message RecordTypeUnion {
  optional MySimpleRecord _MySimpleRecord = 1;
}
